# subprojecttoctree-example-subproject

./: .gitignore  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
