
[metadata]
name = example-subproject
url = https://subprojecttoctree-example-subproject.readthedocs.io/
description = "A minimal python project to demonstrate the sphinx-subprojecttoctree extension for Sphinx (this is the subproject-part)."

[options]
python_requires = >=3.8.1

[options.extras_require]
docs =
    sphinx~=4.4.0
    sphinx-subprojecttoctree~=0.4.0
    sphinx_rtd_theme~=1.0.0

